# web-url-scanner

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
scripts/: setup_local.sh
src/web_url_scanner/: config.py  logger.py  scanner.py
