[tool.poetry]
name = "web-url-scanner"
version = "0.1.0"
description = "A Python script for scanning websites and generating URL reports"
authors = ["Alexander Yuvchenko <alexander.yuvchenko@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.13.2"
httpx = "^0.28.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 
